@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4OpenGLStoredWin32Viewer.hh,v 1.4 2001-07-14 21:47:45 johna Exp $
+// $Id: G4OpenGLStoredWin32Viewer.hh,v 1.5 2002-10-16 10:44:14 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -43,7 +43,8 @@ class G4OpenGLStoredWin32Viewer:
 public G4OpenGLWin32Viewer, public G4OpenGLStoredViewer{
   
 public:
-  G4OpenGLStoredWin32Viewer (G4OpenGLStoredSceneHandler& scene);
+  G4OpenGLStoredWin32Viewer (G4OpenGLStoredSceneHandler& scene,
+			     const G4String& name = "");
   void Initialise ();
   void DrawView ();
 };
