@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4OpenGLStoredWin32Viewer.cc,v 1.5 2002-02-24 01:48:16 johna Exp $
+// $Id: G4OpenGLStoredWin32Viewer.cc,v 1.6 2002-10-16 10:44:16 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -36,16 +36,18 @@
 
 #include "G4ios.hh"
 
-G4OpenGLStoredWin32Viewer::G4OpenGLStoredWin32Viewer (G4OpenGLStoredSceneHandler& scene):
+G4OpenGLStoredWin32Viewer::G4OpenGLStoredWin32Viewer
+(G4OpenGLStoredSceneHandler& scene,
+ const G4String&  name):
 G4OpenGLViewer (scene),
 G4OpenGLWin32Viewer (scene),
 G4OpenGLStoredViewer (scene),
-G4VViewer (scene, scene.IncrementViewCount ()) {
+G4VViewer (scene, scene.IncrementViewCount (), name) {
 
   if (fViewId < 0) return;  // In case error in base class instantiation.
 }
 
-void G4OpenGLStoredWin32Viewer::Initialse () {
+void G4OpenGLStoredWin32Viewer::Initialise () {
 
   //Check that G4OpenGLWin32Viewer got a double buffered colour visual
 
